# weld-defect-classification-RIAWELC-deeplify

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  train.py
deeplify/: __init__.py  data.py  gradcam.py  model.py
notebooks/: 01_data_exploration.py  02_dataloader_test.py  kaggle_training.ipynb
outputs/: evaluation_results.json  weld_split_evaluation.json
src/: dataset.py  evaluate.py  evaluate_weld_split.py  export.py  gradcam.py  inference.py  losses.py  model.py  splits.py  train.py
